kubernetes-monitoring/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homework
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
