kubernetes-monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-web
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
       app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 310581/otus-kuber-2024-01-nginx:1.0.1
        workingDir: /homework
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /homework
          name: nginx-volume
        lifecycle:
          preStop:
            exec:
              command: ['sh', '-c', 'rm -rf /homework/index.html']
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          failureThreshold: 1
          periodSeconds: 5
      - name: nginx-exporter
        image: 'nginx/nginx-prometheus-exporter:1.1.0'
        args:
          - '-nginx.scrape-uri=http://localhost:8000/basic_status'
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
          - containerPort: 9113
      volumes:
      - name: nginx-volume
        emptyDir:
          sizeLimit: 50Mi
