kubernetes-monitoring/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-exp
  namespace: homework
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9113
      name: svc-nginx-exporter
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-cip
  namespace: homework
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: svc-nginx-cip
  type: ClusterIP
